--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 ---
-layout: default
+layout: page
 title: "Home"
 ---
 
-{% if site.show_excerpts %}
-  {% include home.html %}
-{% else %}
-  {% include archive.html title="Posts" %}
-{% endif %}
+I am a neuroscientist trying to use my brain to study how the brain functions. I hold a PhD in Behavioural Neuroscience from University College London, an MPhil from the Department of Medicine at Imperial College London, and a Bachelor in Psychology from University College London. 
