--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@ layout: page
 title: "Home"
 ---
 
-I am a neuroscientist trying to use my brain to study how the brain functions. I hold a PhD in Behavioural Neuroscience from University College London, an MPhil from the Department of Medicine at Imperial College London, and a Bachelor in Psychology from University College London. 
+I am a neuroscientist trying to use my brain to study how the brain functions. 
+
+I hold a PhD in Behavioural Neuroscience from University College London, an MPhil from the Department of Medicine at Imperial College London, and a Bachelor in Psychology from University College London.
+
+
