--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Home"
+title: "About Me"
 ---
 
 I am a neuroscientist trying to use my brain to study how the brain functions. 
