--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title: "About Me"
 
 I am a neuroscientist trying to use my brain to study how the brain functions. 
 
-I hold a PhD in Behavioural Neuroscience from University College London, an MPhil from the Department of Medicine at Imperial College London, and a Bachelor in Psychology from University College London.
+I hold a PhD in Behavioural Neuroscience and a Bachelor in Psychology from University College London, and an MPhil from the Department of Medicine at Imperial College London. 
 
-
+After spending a decade in London, UK, I return to my home country and now live in Shanghai, China. 
