--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: "About Me"
 
 I am trying to use my brain to study how the brain functions.
 
-I received my B.S. degree in Psychology from University College London (2014), an MPhil from the Department of Medicine from Imperial College London (2015). Before I started by PhD training with Prof. Kate Jeffery (https://jefferylab.com), I was a visiting graduate student at Harvard University (2016). 
+I received my B.S.degree in Psychology from University College London (2014) and an MPhil in Experimental Neuroscience from Imperial College London (2015). Before I started by PhD training with Prof. Kate Jeffery, I was a visiting graduate student at Harvard University (2016). 
 
 Recently, I received my Ph.D. degree in Behavioural Neuroscience from University College London (2021), where I found two distinct 'compass' systems for spatial orientation in the rat brain. 
 
-After a decade spent in London, UK, I have returned to my home country, China. I am currently conducting a postdoctoral research with Dr Ninglong Xu ( url: 'https://www.ninglongxu-lab.org/') the Institute of Neuroscience, Chinese Academy of Sciences (ION) in Shanghai. 
+After a decade spent in London, UK, I have returned to my home country, China. I am currently conducting a postdoctoral research with Dr Ninglong Xu the Institute of Neuroscience, Chinese Academy of Sciences (ION) in Shanghai. 
 
 
 
