--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ I received my B.S.degree in Psychology from University College London (2014) and
 
 Recently, I received my Ph.D. degree in Behavioural Neuroscience from University College London (2021), where I found two distinct 'compass' systems for spatial orientation in the rat brain. 
 
-After a decade spent in London, UK, I have returned to my home country, China. I am currently conducting a postdoctoral research with Dr Ninglong Xu the Institute of Neuroscience, Chinese Academy of Sciences (ION) in Shanghai. 
+After a decade spent in London, UK, I have returned to my home country, China. I am currently conducting a postdoctoral research with Dr Ninglong Xu at the Institute of Neuroscience, Chinese Academy of Sciences (ION) in Shanghai.I aim to understand how marmosets use their brain to flexibly make decisions. 
 
 
 
