--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "About Me"
 ---
 
-<img src="img/NZ_photo.JPG" class="img-responsive" alt=""> </div>
+<img src="NZ_photo.JPG" class="img-responsive" alt=""> </div>
 
 I am trying to use my brain to study how the brain works.
 
