--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: "About Me"
 
 I am trying to use my brain to study how the brain works.
 
-I received my B.S.degree in Psychology from University College London (2014) and an MPhil in Experimental Neuroscience from Imperial College London (2015). Before I started by PhD training with Prof. Kate Jeffery, I was a visiting graduate student at Harvard University (2016). 
+I received my B.S.degree in Psychology from University College London (2014) and an MPhil in Experimental Neuroscience from Imperial College London (2015). Before I started by PhD training with Prof. Kate Jeffery, I was a visiting scholar at Harvard University (2016). 
 
 Recently, I received my Ph.D. degree in Behavioural Neuroscience from University College London (2021), where I found two distinct 'compass' systems for spatial orientation in the rodent brain. 
 
