--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@ title: "About Me"
 
 <img src="NZ_photo.JPG" width="300" height="400" class="img-responsive" alt=""> </div>
 
-
 I am trying to use my brain to study how the brain works.
 
-I received my B.S.degree in Psychology from University College London (2014) and an MPhil in Experimental Neuroscience from Imperial College London (2015). Before I started by PhD training with Prof. Kate Jeffery at UCL, I was a visiting scholar at Harvard University (2016). 
+I received my BSc degree in Psychology from University College London (2014) and an MPhil in Experimental Neuroscience from Imperial College London (2015) in the UK. Before I started by PhD training with Prof. Kate Jeffery at UCL, I was a visiting scholar at Harvard University (2016) in the US. 
 
-I recently received the Ph.D. degree in Behavioural Neuroscience from University College London (2021), where I found two distinct neural 'compass' systems for spatial orientation in the rodent brain. 
+I recently received the Ph.D. degree in Behavioural Neuroscience from University College London (2021), where I found two distinct neural 'compass' systems for spatial orientation in the rodent brain,encoding local and global directions in symmetric environments.  
 
-After a decade spent in London, UK, I have returned to my home country, China. I am currently conducting a postdoctoral research with Dr Ninglong Xu at the Institute of Neuroscience, Chinese Academy of Sciences in Shanghai, aiming to understand how nonhuman primates make flexible decisions and the underlying neural mechanisms. 
+After a decade spent in London, UK, I have returned to my home country, China. I am currently conducting a postdoctoral research with Dr Ninglong Xu at the Institute of Neuroscience, Chinese Academy of Sciences in Shanghai. I aim to understand how nonhuman primates monitor and make flexible decisions, as well as the underlying neural mechanisms. 
 
 
 
