--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ I received a BSc degree in Psychology from University College London (2014) and 
 
 I recently received the Ph.D. degree in Behavioural Neuroscience from University College London (2021), where I found two distinct neural 'compass' systems for spatial orientation in the rodent brain,encoding local and global directions in symmetric environments.  
 
-After a decade spent in London, UK, I returned to my home country, China, for a postdoctoral research with Dr Ning-long Xu at the Institute of Neuroscience, Chinese Academy of Sciences in Shanghai. I aim to understand how rodents and nonhuman primates monitor and make flexible decisions and the underlying neural circuit mechanisms. 
+After a decade spent in London, UK, I returned to my home country, China, for a postdoctoral research with Dr Ning-long Xu at the Institute of Neuroscience, Chinese Academy of Sciences in Shanghai. 
+
+I aim to understand how rodents and nonhuman primates monitor and make flexible decisions and the underlying neural circuit mechanisms. 
 
 I occasionally teach topics in Cognitive Neuroscience and Psychology. 
 
