--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ After a decade spent in London, UK, I returned to my home country, China, for a 
 
 I aim to understand how rodents and nonhuman primates monitor and make flexible decisions and the underlying neural circuit mechanisms. 
 
-I occasionally teach topics in Cognitive Neuroscience and Psychology. 
+I occasionally teach topics in Psychology, Cognitive Neuroscience and Neurotechology. 
 
 
 
